Fix top nav on mobile

--- a/src/assets/scss/motor-nx.scss
+++ b/src/assets/scss/motor-nx.scss
@@ -32,3 +32,29 @@
 .breadcrumb-item span {
   letter-spacing: -0.025rem;
 }
+
+.motor-navbar-top {
+  @media (min-width: 992px) {
+    .navbar-expand-lg .navbar-nav {
+      flex-direction: row !important;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .navbar-nav {
+      flex-direction: row !important;
+    }
+  }
+
+  @media (min-width: 576px) {
+    .navbar-nav {
+      flex-direction: row !important;
+    }
+  }
+
+  @media (max-width: 575px) {
+    .navbar-nav {
+      flex-direction: row !important;
+    }
+  }
+}
